<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_r"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:hint="@string/username_hint_r"
            android:textColor="#0099cc" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_username"
            android:text="@string/password_r"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_password"
            android:hint="@string/password_hint_r"
            android:inputType="textPassword"
            android:textColor="#0099cc" />

        <TextView
            android:id="@+id/tv_password1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:text="@string/password1_r"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_password1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_password1"
            android:hint="@string/password1_hint_r"
            android:inputType="textPassword"
            android:textColor="#0099cc" />



        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password1"
            android:text="@string/nama_r"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_nama"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_nama"
            android:hint="@string/nama_hint_r"
            android:textColor="#0099cc" />

        <TextView
            android:id="@+id/tv_jk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_nama"
            android:text="@string/jk_r"
            android:textColor="#000" />

        <RadioGroup
            android:id="@+id/rg_jk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_jk">

            <RadioButton
                android:id="@+id/rb_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_jk"
                android:text="@string/jk_p"
                android:textColor="#000" />

            <RadioButton
                android:id="@+id/rb_w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_jk"
                android:layout_toRightOf="@id/rb_p"
                android:text="@string/jk_wanita"
                android:textColor="#000" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rg_jk"
            android:text="@string/email_r"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:hint="@string/email_hint_r"
            android:inputType="textEmailAddress"
            android:textColor="#0099cc" />

        <TextView
            android:id="@+id/tv_hp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_email"
            android:text="@string/hp_r"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_hp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hp"
            android:hint="@string/hp_hint_r"
            android:textColor="#0099cc" />

        <TextView
            android:id="@+id/tv_ttl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_hp"
            android:text="@string/ttl_r"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_ttl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_ttl"
            android:hint="@string/ttl_hint_r"
            android:textColor="#0099cc" />

        <EditText
            android:id="@+id/et_ttl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ttl_hint_r1"
            android:layout_below="@id/tv_ttl"
            android:layout_centerHorizontal="true"
            android:textColor="#0099cc" />

        <EditText
            android:id="@+id/et_ttl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ttl_hint_r2"
            android:layout_below="@id/tv_ttl"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:textColor="#0099cc" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_ttl"
            android:background="#0099cc"
            android:text="@string/step2"
            android:textColor="#fff" />

    </RelativeLayout>
</ScrollView>